#
# RandNetGen
#
# Copyright 2014 Pol Colomer de Simon.
#
# All rights reserved. Code under License GPLv3.
#
# RandNetGen is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License.
#
# RandNetGen is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with RandNetGen.  If not, see <http://www.gnu.org/licenses/>.
#

SUBDIRS = src

AM_CPPFLAGS = 

EXTRA_DIST = bootstrap.sh readme.md

ACLOCAL_AMFLAGS = -I m4

CLEANFILES = *~
