#
# RandNetGen
#
# Copyright 2014 Pol Colomer de Simon.
#
# All rights reserved. Code under License GPLv3.
#
# RandNetGen is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License.
#
# RandNetGen is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with RandNetGen.  If not, see <http://www.gnu.org/licenses/>.
#


AM_CPPFLAGS = -I$(top_srcdir) 

dist_bin_SCRIPTS =

bin_PROGRAMS = RandNetGen

randnetgen_SOURCES = \
			annealingCbar.c	\
			annealingCbar.h	\
			annealingCk.c 	\
			annealingCk.h 	\
			annealingKnn.c	\
			annealingKnn.h \
			annealingPkkCbar.c \
			annealingPkkCbar.h \
			annealingPkkCk.c \
			annealingPkkCk.h \
			annealingPkkTRI.c \
			annealingPkkTRI.h \
			annealingTRI.c \
			annealingTRI.h \
			graph_library.c \
			graph_library.h \
			randnetgen.c \
			randnetgen.h \
			rewiring.c \
			rewiring.h 

ACLOCAL_AMFLAGS = -I m4

CLEANFILES = *~
